--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
 alembic==0.8.4
+aniso8601==1.1.0
 blinker==1.4
 coverage==4.0.3
 decorator==4.0.6
 Flask==0.10.1
 Flask-Mail==0.9.1
 Flask-Migrate==1.7.0
+Flask-RESTful==0.3.5
 Flask-Script==2.0.5
 Flask-SQLAlchemy==2.1
 ipython==4.0.3
@@ -18,9 +20,11 @@ pexpect==4.0.1
 pickleshare==0.6
 Pillow==3.1.0
 ptyprocess==0.5
+python-dateutil==2.5.3
 python-editor==0.5
+pytz==2016.6.1
 simplegeneric==0.8.1
+six==1.10.0
 SQLAlchemy==1.0.11
 traitlets==4.1.0
 Werkzeug==0.11.3
-wheel==0.26.0
